Text out of bounds fix for webpage header (and header text aligned to left when in mobile version)

--- a/css/main.css
+++ b/css/main.css
@@ -766,17 +766,18 @@ dd {
     #mobile-app-hero {
         grid-template-columns: 50% 50%;
         justify-items: center;
+        column-gap:0;
     }
 
     #mobile-app-hero h1 {
         margin-left: auto;
-        grid-column: 1/3;
+        grid-column: 1/-1;
         grid-row: 1;
         font-size: 3rem;
     }
 
     #mobile-app-hero p {
-        grid-column: 1/3;
+        grid-column: 1/-1;
         grid-row: 2;
     }
 
@@ -817,6 +818,10 @@ dd {
 }
 
 @media screen and (max-width: 849px) {
+    #mobile-app-hero {
+        grid-template-columns: 100%;
+    }
+
     #mobile-app-hero h1 {
         font-size: 2.375rem;
     }
@@ -842,5 +847,9 @@ dd {
 
     #mobile-app-splash nav {
         display: none;
+    }
+
+    #mobile-app-hero h1 {
+        width: 100%;
     }
 }
